@startuml

title TO LIST ALL SPRINTS FROM A PROJECT
skinparam sequenceMessageAlign center

class ProjectCodeStringDto {
-code
+getCode()
}

class ProjectCodeValueObjectDto {
-code
+getCode()
}

class ProjectCodeDtoAssembler {
+convertToValueObject(projectCodeStringDto)
}

class SprintWebController {
-sprintListService
+listSprintsFromProject(projectCodeStringDto)
}

class SprintListService {
-iSprintRepository
+listSprintsFromProject(projectCodeValueObjectDto)
}

interface ISprintRepository {
+findByProjectCode(code)
}

class SprintRepository {
-sprints
+findByProjectCode(code)
}

class SprintDtoAssembler {
+sprintToValueObjectsDto(sprint)
+convertToPrimitiveTypes(sprintValueObjectsDto)
}

class SprintValueObjectsDto {
-id
-number
-status
-startDate
-endDate
+getId()
+getNumber()
+getStatus()
+getStartDate()
+getEndDate()
}

class SprintPrimitiveTypesDto {
-id
-number
-status
-startDate
-endDate
}

class Sprint {
-sprintId
-sprintNumber
-sprintStatus
-period
}

SprintWebController <.. SprintListService: is injected
SprintListService <.. ISprintRepository: is injected
SprintRepository ..|> ISprintRepository: implements
SprintListService ..> Sprint: uses
SprintDtoAssembler ..> SprintListService: uses
SprintDtoAssembler ..> SprintWebController: uses
ProjectCodeDtoAssembler ..> SprintWebController: uses
SprintDtoAssembler ..> Sprint: uses
SprintValueObjectsDto <.. SprintDtoAssembler: uses
SprintPrimitiveTypesDto <.. SprintDtoAssembler: uses
ProjectCodeStringDto <.. ProjectCodeDtoAssembler: uses
ProjectCodeValueObjectDto <.. ProjectCodeDtoAssembler: uses
Sprint "*" <-down- "1" SprintRepository: has

@enduml